--- a/package.json
+++ b/package.json
@@ -12,29 +12,35 @@
   "keywords": [],
   "author": "Mikeal Rogers <mikeal.rogers@gmail.com> (http://www.mikealrogers.com)",
   "license": "Apache-2.0",
-  "devDependencies": {
-    "eslint": "^4.19.1",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-standard": "^3.1.0",
-    "ipfs-api": "^22.1.0",
-    "tap": "^12.0.1"
-  },
-  "eslintConfig": {
-    "parserOptions": {
-      "ecmaVersion": 8
-    },
-    "root": true,
-    "extends": [
-      "standard"
-    ]
-  },
   "dependencies": {
     "bent": "^1.1.0",
     "cids": "^0.5.3",
     "farmhash": "^2.1.0",
+    "ipld-complex-graph-builder": "^0.1.0",
+    "ipld-store": "^0.1.1",
     "json-stream": "^1.0.0"
+  },
+  "devDependencies": {
+    "babel-eslint": "^8.2.5",
+    "eslint": "^5.0.1",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-config-standard-babel": "0.0.2",
+    "eslint-plugin-babel": "^5.1.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-standard": "^3.1.0",
+    "tap": "^12.0.1"
+  },
+  "eslintConfig": {
+    "parser": "babel-eslint",
+    "extends": [
+      "standard",
+      "standard-babel"
+    ],
+    "plugins": [
+      "babel",
+      "standard"
+    ]
   }
 }
